# react-native-reanimated

./: .clang-format  .clang-tidy  .clangd  .detoxrc.js  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .lintstagedrc-common.js  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .prettiereslintignore  .prettierignore  .prettierignore.root  .prettierrc  .releaserc.json  .remarkignore  .remarkrc.mdx.mjs  .remarkrc.mjs  .travis.yml  .watchmanconfig  .yarnrc.yml  014750f7.09ab6df9.js  014750f7.3cf09309.js  014750f7.7427c85c.js  014750f7.7913ef29.js  014750f7.9cad6a09.js  014750f7.a5bb11c3.js  014750f7.ddd4a56f.js  014c7138.a15ddde1.js  014c7138.c9570005.js  014c7138.ce5fcb1e.js  014c7138.f76f3e6a.js  01550a39.df634d94.js  01a85c17.0774da50.js  01a85c17.257b8cf8.js  01a85c17.2b75b0af.js  01a85c17.40fef67c.js  (+3525 more)
android/: Android.mk  CMakeLists.txt  README.md  build.gradle  empty.cpp  gradle.properties  settings.gradle  spotless.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/rnVersionPatch/62/layoutReanimation/: ReanimatedNativeHierarchyManager.java
android/rnVersionPatch/63/layoutReanimation/: ReanimatedUIImplementation.java
android/rnVersionPatch/67/: ReanimatedMessageQueueThread.java
android/src/fabric/java/com/swmansion/reanimated/: NativeProxy.java  ReaCompatibility.java
android/src/main/: AndroidManifest.xml  Common
android/src/main/JNI/: Android.mk  Application.mk
android/src/main/JNI/react/: Android.mk
android/src/main/cpp/: AndroidErrorHandler.cpp  AndroidLogger.cpp  AndroidLogger.h  AndroidScheduler.cpp  AndroidScheduler.h  AndroidUIScheduler.cpp  AndroidUIScheduler.h  HermesExecutorRuntimeAdapter.h  JNIHelper.cpp  JNIHelper.h  JNIRegistry.cpp  JavaWrapperJSCallbacksManager.cpp  JavaWrapperJSCallbacksManager.h  JavaWrapperJSConfigManager.cpp  JavaWrapperJSConfigManager.h  LayoutAnimations.cpp  LayoutAnimations.h  NativeProxy.cpp  NativeProxy.h  NativeReanimatedModule.cpp  NativeReanimatedModuleSpec.cpp  OnLoad.cpp  ReanimatedJSIDynamic.cpp  ReanimatedTurboModule.cpp  RuntimeProvider.cpp  TurboModule.cpp  TurboModule.h
android/src/main/cpp/headers/: AndroidErrorHandler.h  AndroidLogger.h  AndroidScheduler.h  AndroidUIScheduler.h  HermesExecutorRuntimeAdapter.h  JNIHelper.h  JNIRegistry.h  LayoutAnimations.h  NativeProxy.h  NativeReanimatedModule.h  NativeReanimatedModuleSpec.h  ReanimatedJSIDynamic.h  ReanimatedTurboModule.h  RuntimeProvider.h  TurboModule.h
android/src/main/java/com/facebook/react/bridge/: JSModuleReanimatedHelper.java
android/src/main/java/com/facebook/react/uimanager/: UIManagerReanimatedHelper.java  UIManagerUtils.java
android/src/main/java/com/swmansion/common/: GestureHandlerStateManager.blabla  GestureHandlerStateManager.java  ScreenStackFragmentCommon.java  ScreenTransitionManager.java  SharedElementAnimator.java  SharedElementAnimatorDelegate.java  SharedTransitionConfig.java  SharedViewConfigCommon.java
android/src/main/java/com/swmansion/gesturehandler/react/: CustomGestureHandler.java
android/src/main/java/com/swmansion/reanimated/: AndroidErrorHandler.java  AndroidUIScheduler.java  Callback.java  CopiedEvent.java  CopyingEventEmitter.java  EvalContext.java  EvaluationContext.java  FrameEvaluation.java  JavaWrapperJSCallbacksManager.java  JavaWrapperJSConfigManager.java  MapUtils.java  NativeMethodsHelper.java  NativeProxy.java  NodesManager.java  ReactNativeUtils.java  ReanimatedJSIModulePackage.java  ReanimatedMessageQueueThread.java  ReanimatedMessageQueueThreadBase.java  ReanimatedModule.java  ReanimatedPackage.java  RuntimeType.java  Scheduler.java  StyleSnapshot.java  UIScheduler.java  UpdateContext.java  Utils.java
android/src/main/java/com/swmansion/reanimated/bridging/: BridgingUtils.java  JSEventDispatcherAccessor.java  MethodAccessor.java  NativeModuleAccessor.java  ReactMethodAccessor.java  ReadableArrayResolver.java  ReadableCollectionResolver.java  ReadableMapResolver.java  ReanimatedBridge.java  ReanimatedBridgeDelegate.java  ReanimatedCallback.java  ReanimatedDynamic.java  ReanimatedMapBuilder.java  ReanimatedReflectionHelper.java  ReanimatedViewManagerRegistry.java  ReanimatedWritableArray.java  ReanimatedWritableMap.java  ReanimatedWritableNativeArray.java  ReanimatedWritableNativeMap.java  ReflectionUtils.java  ViewManagerAccessor.java
android/src/main/java/com/swmansion/reanimated/frameCallback/: FrameCallbackContainer.java  FrameCallbackManager.java
android/src/main/java/com/swmansion/reanimated/keyboard/: Keyboard.java  KeyboardAnimationCallback.java  KeyboardAnimationManager.java  KeyboardJSCallbackWrapper.java  KeyboardState.java  KeyboardWorkletWrapper.java  ModalActivityManager.java  WindowsInsetsManager.java
android/src/main/java/com/swmansion/reanimated/keyboardObserver/: ReanimatedKeyboardEventListener.java
android/src/main/java/com/swmansion/reanimated/layoutReanimation/: AnimatedRoot.java  Snapshooter.java  (+17 more)
android/src/paper/java/com/swmansion/reanimated/: NativeProxy.java  NativeReanimatedModuleSpec.java
android/src/reactNativeVersionPatch/ReanimatedUIManager/73/com/swmansion/: ReanimatedModule.java
plugin-swc/spec/swc-reanimated-custom-transform/: Cargo.toml  README.md
plugin-swc/spec/swc-reanimated-custom-transform/src/: lib.rs  util.rs
security-tests/01_easing_oob/: CMakeLists.txt  main.cpp
security-tests/01_easing_oob/shim/reanimated/CSS/common/: definitions.h
tools/reanimated-devtools/: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
tools/reanimated-devtools/include/: app_constants.h  app_state.h  data_structures.h  protocol.h
tools/reanimated-devtools/src/: protocol.cpp
tools/reanimated-devtools/src/data/: mutation_processor.cpp  mutation_processor.h  network_handler.cpp  network_handler.h  profiler_processor.cpp  profiler_processor.h
tools/reanimated-devtools/src/windows/: connection_window.cpp  connection_window.h  controls_window.cpp  controls_window.h  fps_window.cpp  fps_window.h  mutations_window.cpp  mutations_window.h  profiler_window.cpp  profiler_window.h  view_tree_window.cpp  view_tree_window.h
(+29535 files in other folders)
