[package]
name = "swc-reanimated-custom-transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
napi-build = "2.0.0"

[dependencies]
napi = { version = "2.4.3", default-features = false, features = [
  "napi3",
  "serde-json",
] }
napi-derive = { version = "2.4.1", default-features = false, features = [
  "type-def",
] }
swc = { version = "0.236.14", features = ["node"] }
backtrace = "0.3.65"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["unbounded_depth"] }
swc_common = { version = "0.29.23", features = ["concurrent", "sourcemap"] }
swc_ecmascript = { version = "0.206.20", features = ["codegen", "optimization", "parser", "react", "transforms", "typescript", "utils", "visit"] }
swc_node_base = "0.5.8"
swc_ecma_ast = "0.95.7"
swc-reanimated-worklets-visitor = { path = "../../packages/swc-reanimated-worklets-visitor" }
